fix text align

--- a/src/styles/pages/aboutMe.scss
+++ b/src/styles/pages/aboutMe.scss
@@ -101,6 +101,7 @@
         width: 500px;
         margin: auto;
         margin-top: 30px;
+        text-align: left;
       }
     }
   }
